# CORTEX-

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  EXPERIMENT_SUMMARY.md  LICENSE  README.md  conftest.py  fix_encoding.py  package-lock.json  package.json  pyproject.toml  ruff.toml  run_experiments_sequential.py  setup.py
.github/workflows/: ci.yml
benchmarks/: filter_matrix.js  latency.js  scale.js  throughput.js
docs/: METHODOLOGY.md  REPRODUCE.md
experiments/results/: README.md  results_2026-05-04T00-56-16-227Z.json
experiments/results/multimodel/: multimodel_results_2026-06-30T14-23-00.json  multimodel_results_2026-06-30T14-43-11.json  multimodel_results_2026-06-30T14-43-36.json  multimodel_results_2026-07-03T04-59-02.json  multimodel_results_2026-07-03T05-08-56.json  multimodel_results_2026-07-03T05-09-27.json  multimodel_results_2026-07-03T05-27-39.json  multimodel_results_2026-07-03T05-36-58.json  multimodel_results_2026-07-03T05-37-22.json  multimodel_results_2026-07-03T05-45-53.json  multimodel_results_2026-07-03T05-54-03.json  multimodel_results_2026-07-03T05-54-19.json  multimodel_results_2026-07-03T06-25-02.json  multimodel_results_2026-07-03T06-33-44.json  multimodel_results_2026-07-03T06-34-10.json  multimodel_results_2026-07-03T06-41-15.json  multimodel_results_2026-07-03T06-45-55.json  multimodel_summary_2026-06-30T14-23-00.csv  multimodel_summary_2026-07-03T04-59-02.csv  multimodel_summary_2026-07-03T05-27-39.csv  multimodel_summary_2026-07-03T05-36-58.csv  multimodel_summary_2026-07-03T05-37-22.csv  multimodel_summary_2026-07-03T05-45-53.csv  multimodel_summary_2026-07-03T06-34-10.csv  multimodel_summary_2026-07-03T06-41-15.csv  multimodel_summary_2026-07-03T06-45-55.csv
experiments/scripts/: check_paper_results.js  clone_repos.js  estimate_fpr.js  plot_figures.py  plot_multimodel_figures.py  run.js  run_full.js  run_multimodel.py  run_single.js  run_tasks.js  run_threshold.js  run_validation.js  tasks.js  validate.js
experiments/tasks/: task_definitions.json
paper/: main.tex
src/: cli.js
src/filters/: advanced.js  index.js  research.js
src/python/: __init__.py
src/python/prompt/: compressor.py
src/python/python/: __main__.py  filter.py  filters_v2.py
src/python/python/quality/: metrics.py
src/python/swe/: context.py
tests/: advanced.test.js  filters.test.js  research.test.js  test_filter_python.py
